# metafor

./: Cargo.toml  LICENSE  README.md
examples/: enum-conversion.rs  integer-marker-trait.rs
src/: attr.rs  lib.rs  replacement.rs
src/attr/: structs.rs  tuples.rs
