[package]
name = "metafor"
version = "0.1.0"
description = "A crate for quickly generating repetive code from a single example."
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"
repository = "https://github.com/chuck-flowers/metafor.git"
readme = "./README.md"
license = "MIT"
categories = ["development-tools"]
keywords = ["template", "macro", "codegen"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.18"
quote = "^1.0.7"
syn = { version = "^1.0.33", features = ["full", "visit-mut"] }

[dev-dependencies]
pretty_assertions = "^0.6.1"
syn = { version = "^1.0.33", features = ["extra-traits", "full", "visit-mut"] }
